# forked-minisketch

./: .gitignore  CMakeLists.txt  INTSALL_with_Cmake.md
CMake/: pthread_test.cc.in
example/: CMakeLists.txt  example.cpp
include/: minisketch_wrapper.h
src/: test-exhaust.cpp
test/: CMakeLists.txt  minisketch_test.cpp
vcpkg/minisketch/: CONTROL  portfile.cmake
